fix mobile horizontal scroll issue

--- a/en/theme/material/assets/css/partials/_header.css
+++ b/en/theme/material/assets/css/partials/_header.css
@@ -52,6 +52,12 @@
   white-space: nowrap;
 }
 
+@media screen and (max-width: 76.1875em) {
+  .md-header__docs-label {
+    display: none;
+  }
+}
+
 .md-header__inner {
   padding: 0 1rem;
   min-height: var(--md-header-min-height);
